@@ -32,7 +32,7 @@ The objective is to estimate the most likely surrogate model (general linear mod
 %feature("docstring") OT::BoxCoxFactory::build
 "Estimate the Box Cox transformation.
 
-Available usages:
+Available usages with time series:
     build(*myTimeSeries*)
 
     build(*myTimeSeries, shift*)
@@ -41,13 +41,23 @@ Available usages:
 
     build(*mySample*)
 
+Available usages with data only:
+
     build(*mySample, shift*)
 
     build(*mySample, shift, likelihoodGraph*)
 
+Available usages with a general linear model:
+
     build(*inputSample, outputSample, covarianceModel, basis, shift, generalLinearModelResult*)
 
     build(*inputSample, outputSample, covarianceModel, shift, generalLinearModelResult*)
+
+Available usages with a linear model:
+
+    build(*inputSample, outputSample, basis, shift*)
+
+    build(*inputSample, outputSample, shift*)
 
 Parameters
 ----------
@@ -79,9 +89,13 @@ Returns
 -------
 myBoxCoxTransform : :class:`~openturns.BoxCoxTransform`
     The estimated Box Cox transformation.
+linearModelResult : :class:`~openturns.lLinearModelResult`
+    Empty structure that contains results of linear model algorithm.
 
 Notes
 -----
+
+We get `linearModelResult` with the two usages corresponding to the `linear model application`.
 
 We describe the estimation in the univariate case, in the case of no surrogate model estimate. Only the parameter :math:`\lambda` is estimated. To clarify the notations, we omit the mention of :math:`\alpha` in :math:`h_\lambda`.
 
@@ -232,4 +246,18 @@ Estimation of a general linear model:
 >>> covarianceModel = ot.DiracCovarianceModel()
 >>> shift = [1.0e-1]
 >>> myBoxCox = ot.BoxCoxFactory().build(inputSample, outputSample, covarianceModel, basis, shift, result)
+
+Estimation of a linear model:
+
+>>> ot.RandomGenerator.SetSeed(0)
+>>> x = ot.Uniform(-1.0, 1.0).getSample(20)
+>>> y = ot.Sample(x)
+>>> # Evaluation of y = ax + b (a: scale, b: translate)
+>>> y = y * [3] + [3.1]
+>>> # inverse transformation
+>>> inv_transformation = ot.SymbolicFunction('x', 'exp(x)')
+>>> y = inv_transformation(y) + ot.Normal(0, 1.0e-4).getSample(20)
+>>> # Estimation
+>>> shift = [1.0e-1]
+>>> myBoxCox, result = ot.BoxCoxFactory().build(x, y, shift)
 "
