@@ -415,6 +415,7 @@ ot_pyinstallcheck_test (IsoProbabilisticTransformation_EllipticalCopula)
 ot_pyinstallcheck_test (IsoProbabilisticTransformation_IndependentCopula)
 ot_pyinstallcheck_test (BoxCoxFactory_std)
 ot_pyinstallcheck_test (BoxCoxFactory_glm)
+ot_pyinstallcheck_test (BoxCoxFactory_lm IGNOREOUT)
 ot_pyinstallcheck_test (TrendFactory_std)
 ot_pyinstallcheck_test (DistributionTransformation_std)
 
